Revision history

0.0002_01   TBD
    - Update required version for Test2::V0.

0.0002      2018-12-02
    - Reimplement many things.

0.0001      2018-10-28
    - First release.
